--- a/index.html
+++ b/index.html
@@ -49,10 +49,10 @@
         <h2> Counter </h2>
         <span id="counter" value="counter"> </span>
         <div id="counter">  </div>
-       <button id="reset" type="resetOne" name="reset" onclick="myReset()" value="reset"><span > RESET</span></button>
+       <button id="reset" type="button" name="reset" onclick="myReset()" value="reset"><span > RESET</span></button>
     </div>
 
-    <button class="button" type="Greet Me" name="button" onclick="myGreetings()"> Greet Me </button>
+    <button class="button" type="submit" name="button" onclick="myGreetings()"> Greet Me </button>
 
 
     </form>
